--- a/FSE/js/package.json
+++ b/FSE/js/package.json
@@ -12,6 +12,6 @@
     "@typescript-eslint/parser": "^4.1.1",
     "eslint": "^7.9.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.2"
+    "typescript": "^4.1.0-beta"
   }
 }
